[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example_package_YASHAR"
version = "0.0.1"
authors = [
  { name="Yashar Valizadeh", email="valizadehm82@gmail.com" },
]
description = "A small example package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Repository" = "https://github.com/valizadehm/Packaging-Python-Projects.git"
"Home page" = "https://github.com/valizadehm/Packaging-Python-Projects"
"Bug Tracker" = "https://github.com/valizadehm/Packaging-Python-Projects/issues"
